# flix-backend

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  Cargo.toml  LICENSE  README.md  build-win.bat  bun.lockb  flix  install-local-mysql.sh  install-local-nginx.sh  install.sh  package.json  pubspec.yaml  setup-windows.bat  update.sh  windows.md
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/741d4781c9e15def3f23eed6d594c6e0/: .filecache  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  linux_engine_sources.d  native_assets.d  (+3 more)
.github/workflows/: installer.yml  rust.yml
blank/: index.html  styles.css
client/: README.md  bun.lockb  package.json
client/src/: index.js
lib/: main.dart
lib/mainfold/: dashboard.dart  initlization.dart  server_selection.dart
lib/routes/: dashboard.dart  users.dart  websites.dart  xterm.dart
lib/utils/: request.dart
prisma/: schema.prisma
public/: index.html
scripts/: create-swap.sh  docker-install.sh  install-local-mongodb.sh  install-local-mysql.sh  install-local-nginx.sh
src/: default.nginx.conf  index.ts  main.rs  nginx.conf  setup.ts
src/features/: flix_rs_pass.ts  process-management.ts  site-management.ts
src/routes/: login.ts  register.ts  sysinfo.ts
src/templates/: flix.service  mongod.service  mongodb.conf  nginx-web.conf
src/utils/: auth.ts  datarequest.ts  docker-api.ts  sha256.ts  ssl.ts  templates.ts
v1_panel/: index.html
v1_panel/routes/: login.html  register.html
(+66 files in other folders)
